[package]
name = "multi_iterate_mut"
version = "0.1.0"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
scoped_threadpool="*"
rayon="1.1"
crossbeam="0.7.3"
core_affinity="0.5.10"

arrayvec="0.5"