[package]
name = "multi_iterate_mut"
version = "0.1.0"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
edition = "2018"
license = "MIT"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
scoped_threadpool="*"
rayon="1.1"
crossbeam="0.7.3"
core_affinity="0.5.10"
lazy_static="1.4"
arrayvec="0.5"
